--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MAD_Practical6_21012011052"
         tools:targetApi="31">
+        <service
+            android:name=".MyService"
+            android:enabled="false"
+            android:exported="true"></service>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
